--- a/admin/protected/modules/projects/views/default/index.html
+++ b/admin/protected/modules/projects/views/default/index.html
@@ -63,8 +63,8 @@
                     <th>Tiêu đề</th>
                     <th class="thYokoM">Trạng thái</th>
                     <th class="thYokoM">Loại dự án</th>
-                    <th class="thYokoM">Dự án tiêu biểu</th>
                     <th class="thYokoM">Ngày đăng</th>
+                    <th class="thYokoM">Ngày sữa</th>
                     <th></th>
                 </tr>
             </thead>
