--- a/admin/protected/widgets/views/menu.html
+++ b/admin/protected/widgets/views/menu.html
@@ -9,7 +9,7 @@
 <section>
     <h2>Quản lí tin đăng</h2>
     <ul>
-        <li><a href="/admin/message">Danh sách</a></li>
+        <li><a href="/admin/message/">Danh sách</a></li>
         <li><a href="/admin/message/edit">Thêm tin</a></li>
     </ul>
 </section>
