--- a/site/css/main.css
+++ b/site/css/main.css
@@ -56,6 +56,19 @@ body
 	left: 10px;
 }
 
+#main-sidebar:before{
+	display: table;
+	content: ' ';
+}
+
+#main-sidebar{
+	margin-bottom: 20px;
+}
+
+#main-sidebar:after{
+	clear: both;
+}
+
 .slide-right {
 	height: 350px;
 }
@@ -261,6 +274,7 @@ body
 
 .top-img img{
 	width: 120px;
+	height: 92px;
 	border: 1px solid #CCC;
 	box-shadow: 0px 0px 3px 0px rgba(50, 50, 50, 0.75);
 	padding: 2px;
@@ -277,7 +291,7 @@ body
 .top-info p {
 	font-size: 14px;
 	width: 100%;;
-	height: 60px;
+	max-height: 60px;
 	overflow: hidden;
 }
 
@@ -453,6 +467,40 @@ div.search-form
 	padding: 10px;
 	margin: 10px 0;
 	background: #eee;
+}
+
+.paging {
+	clear: both;
+	width: 100%;
+	margin: 0;
+}
+
+.pageList_link {
+	display: inline;
+	float: right;
+	padding-left: 10px;
+	margin: 0;
+	margin-right: 5px;
+	list-style: none;
+}
+
+.pageList_link li {
+	display: inline-block;
+	width: 25px;
+	height: 20px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	text-align: center;
+	/*background: #06C;*/
+	box-shadow: 0px 2px 2px rgba(150, 150, 150, 0.46);
+}
+
+.pageList_link li a{
+	/*color: #fff;*/
+}
+
+.pageList_link .stay{
+	background: #ff0000;
 }
 
 .portlet
