--- a/admin/protected/widgets/views/menu.html
+++ b/admin/protected/widgets/views/menu.html
@@ -17,8 +17,8 @@
 <section tal:condition="php: user['is_super'] EQ 1">
     <h2>Tin tuyển dụng</h2>
     <ul>
-        <li><a href="/gallery">Danh sách</a></li>
-        <li><a href="/gallery/upload">Thêm tin</a></li>
+        <li><a href="/admin/recruitment">Danh sách</a></li>
+        <li><a href="/admin/recruitment/edit">Thêm tin</a></li>
     </ul>
 </section>
 
