--- a/admin/protected/modules/setting/views/default/breadcrumb.html
+++ b/admin/protected/modules/setting/views/default/breadcrumb.html
@@ -4,11 +4,11 @@
         <li>Quản lí tin tuyển dụng</li>
     </ul>
 </nav>
-<nav id="topicPath" metal:define-macro="index">
+<nav id="topicPath" metal:define-macro="profile">
     <ul>
         <li class="top"><a href="/admin">Home</a></li>
-        <li ><a href="/admin/recruitment/">Danh sách tin tuyển dụng</a></li>
-        <li>Tìm kiếm</li>
+        <li ><a href="/admin/setting/">Setting</a></li>
+        <li>Profile</li>
     </ul>
 </nav>
 <nav id="topicPath" metal:define-macro="view">
