--- a/site/protected/views/layouts/main.html
+++ b/site/protected/views/layouts/main.html
@@ -133,14 +133,14 @@
                 <a target="_blank" href="https://twitter.com/everlandvn"><img alt="" style="margin-bottom: 8px; margin-top: 0px;" src="http://everlandvn.vn/themes/Twitter.png"/></a>
                 <a target="_blank" href="http://www.facebook.com/everlandvn.vn" title="Facebook An Thanh"><img alt="" style="margin-bottom: 8px; margin-top: 0px;" src="http://everlandvn.vn/themes/fb.png"/></a><br/>
                 Trụ sở chính: 495 Man Thiện Tăng Nhơn Phú A, Quận 9, TP Hồ Chí Minh<br/>
-                Tel: (08) 6278 9911 - Fax: (08) 6278 9911 - Email: anthanhreal@gmail.com<br/>
                 Hotline: Mr Diệp 0913565671<br/>
+                Tel: (08) 6278 9911 - Email: anthanhreal@gmail.com<br/>
             </span>
         </div>
 
         <div class="r-footer">
 
-            <p>Bản quyền © 2015 thuộc về CÔNG TY TNHH DT & PT XÂY DỰNG AN THANH</p>
+            <p>Bản quyền © 2015 thuộc về CÔNG TY TNHH DT PT & XÂY DỰNG AN THANH</p>
             <p>Designed by <a href="http://www.facebook.com/coolkg1412">ErisNguyen</a>
         </p><p></p>
 
